[package]
name = "signer"
version = "0.1.0"
edition = "2021"
authors = ["vazw <vaz@siamstr.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6", features = ["csr", "nightly"] }
leptos_meta = { version = "0.6", features = ["csr", "nightly"] }
leptos_router = { version = "0.6", features = ["csr", "nightly"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
nostr-signer = "0.31.0"
nostr = "0.31.1"
web-sys = { version = "0.3.67", features = ["Document", "Window", "Notification", "NotificationAction", "DomParser", "SupportedType", "EventTarget", "Node"] }
qrcode-generator = "4.1.9"
leptos-struct-table = "0.9.1"

# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"


[dev-dependencies]
wasm-bindgen = "0.2.89"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3.67", features = ["Document", "Window", "Notification", "NotificationAction", "DomParser", "SupportedType", "EventTarget", "Node"] }


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
